--- a/IMC/assets/css/style.css
+++ b/IMC/assets/css/style.css
@@ -67,3 +67,10 @@ form .btn {
 form button:hover {
   background: var(--primary-color-darker);
 }
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  p {
+    font-size: 1rem;
+  }
+}
