--- a/IMC/assets/css/style.css
+++ b/IMC/assets/css/style.css
@@ -68,6 +68,10 @@ form button:hover {
   background: var(--primary-color-darker);
 }
 
+div > p.erro {
+  color: red;
+}
+
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   p {
