--- a/IMC/assets/css/style.css
+++ b/IMC/assets/css/style.css
@@ -37,6 +37,14 @@ p.intro {
   justify-content: space-around;
 }
 
+.indiceIMC{
+  margin-right: 25px;
+}
+
+.resultadoIMC{
+  margin-left: 25px;
+}
+
 form input, form label, form button {
   display: block;
   width: 100%;
