--- a/IMC/assets/css/style.css
+++ b/IMC/assets/css/style.css
@@ -41,6 +41,10 @@ p.intro {
   margin-right: 12px;
 }
 
+.resultadoIMC{
+  padding-left: 12px;
+}
+
 form input, form label, form button {
   display: block;
   width: 100%;
